使用 Colaboratory 建立

--- a/藍誼軒_Week6_練習作業_1.ipynb
+++ b/藍誼軒_Week6_練習作業_1.ipynb
@@ -1002,6 +1002,45 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 131
+        },
+        "id": "snQsv47HtIWT",
+        "outputId": "7e829a75-8205-4f99-9b5c-e8479779cb9f"
+      },
+      "source": [
+        "total=0\n",
+        "fruit=\"蘋果\"\n",
+        "number=2\n",
+        "total=total+number\n",
+        "print(\"摘了\"，fruit，number，\"個\"，\"總共摘了\"，total，\"個水果。\")\n",
+        "\n",
+        "fruit=\"梨子\"\n",
+        "number=1\n",
+        "total=total+number\n",
+        "print(\"摘了\"，fruit，number，\"個\"，\"總共摘了\"，total，\"個水果。\")\n",
+        "\n",
+        "fruit=\"桃子\"\n",
+        "number=3\n",
+        "total=total+number\n",
+        "print(\"摘了\"，fruit，number，\"個\"，\"總共摘了\"，total，\"個水果。\")"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-728cd2dbc3dc>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print(\"摘了\"，fruit，number，\"個\"，\"總共摘了\"，total，\"個水果。\")\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "icijGZ_GlZGV"
@@ -1009,6 +1048,103 @@
       "source": [
         "(1)在Python中，用1表示True，0和其他非1的整數表示False。(2)在Python中，的確所有物件都可以進行布林測試。 兩者皆正確。\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JKNMyJ-5pD3L",
+        "outputId": "cf2e1695-768a-4a27-d4d2-1b76025dc19c"
+      },
+      "source": [
+        "bool(1)\n",
+        "bool(0)\n",
+        "bool(2)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6Gz5nAx1qRy6",
+        "outputId": "7cf60eec-5160-4cde-fd75-63a4dec244fe"
+      },
+      "source": [
+        "bool(0)\n"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wmqGy8biqWas",
+        "outputId": "cc5758fc-f5cd-4bfc-9f8a-c15f0786b017"
+      },
+      "source": [
+        "bool(2)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v21Mz_fgqZH7"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
