使用 Colaboratory 建立

--- a/藍誼軒_Week8_基本程式設計_課後練習.ipynb
+++ b/藍誼軒_Week8_基本程式設計_課後練習.ipynb
@@ -167,7 +167,37 @@
         "print(第一層)\n",
         "print(第二層)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "11\n",
+            "13\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "miH-QgyJljeG",
+        "outputId": "7f3d899a-95a6-4355-f723-fdb3308232e5"
+      },
+      "source": [
+        "a=13\n",
+        "b=11\n",
+        "c=a\n",
+        "a=b\n",
+        "b=c\n",
+        "print(a)\n",
+        "print(b)"
+      ],
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,7 +386,7 @@
         "print(f)\n",
         "print(a+b+c+d+e+f)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,6 +398,69 @@
             "1\n",
             "1\n",
             "6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AC7wwq3wtUHR"
+      },
+      "source": [
+        "上面的解題思考是每個人都會一直吃糖果，留下一份其他時間不管拿到幾個都會吃掉，因此最後每個人都剩一份糖果，最後共有六顆，一人一顆。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lyuPswOSo92x",
+        "outputId": "d695d5c2-2569-4843-a144-bc27b610f742"
+      },
+      "source": [
+        "##input\n",
+        "a=b=c=d=e=f=eval(input(\"enter a number:\"))\n",
+        "\n",
+        "##process\n",
+        "a=a//3;b=b+a;f=f+a\n",
+        "print(\"a=\",a,\"b=\",b,\"c=\",c,\"d=\",d,\"e=\",e,\"f=\",f)\n",
+        "\n",
+        "b=b//3;a=a+b;c=c+b\n",
+        "print(\"a=\",a,\"b=\",b,\"c=\",c,\"d=\",d,\"e=\",e,\"f=\",f)\n",
+        "\n",
+        "c=c//3;b=b+c;d=d+c\n",
+        "print(\"a=\",a,\"b=\",b,\"c=\",c,\"d=\",d,\"e=\",e,\"f=\",f)\n",
+        "\n",
+        "d=d//3;c=c+d;e=e+d\n",
+        "print(\"a=\",a,\"b=\",b,\"c=\",c,\"d=\",d,\"e=\",e,\"f=\",f)\n",
+        "\n",
+        "e=e//3;d=d+e;f=f+e\n",
+        "print(\"a=\",a,\"b=\",b,\"c=\",c,\"d=\",d,\"e=\",e,\"f=\",f)\n",
+        "\n",
+        "f=f//3;e=e+f;a=a+f\n",
+        "print(\"a=\",a,\"b=\",b,\"c=\",c,\"d=\",d,\"e=\",e,\"f=\",f)\n",
+        "\n",
+        "\n",
+        "##output\n",
+        "print(a,b,c,d,e,f)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "enter a number:3\n",
+            "a= 1 b= 4 c= 3 d= 3 e= 3 f= 4\n",
+            "a= 2 b= 1 c= 4 d= 3 e= 3 f= 4\n",
+            "a= 2 b= 2 c= 1 d= 4 e= 3 f= 4\n",
+            "a= 2 b= 2 c= 2 d= 1 e= 4 f= 4\n",
+            "a= 2 b= 2 c= 2 d= 2 e= 1 f= 5\n",
+            "a= 3 b= 2 c= 2 d= 2 e= 2 f= 1\n",
+            "3 2 2 2 2 1\n"
           ],
           "name": "stdout"
         }
