--- a/藍誼軒_Week14_作業習題.ipynb
+++ b/藍誼軒_Week14_作業習題.ipynb
@@ -73,7 +73,7 @@
         "else:\n",
         "    print(\"體重肥胖\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
         "if num==0:\n",
         "    print(\"等於零\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +153,7 @@
         "else:\n",
         "    print(\"是負數\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
         "else:\n",
         "    print(\"等於零\")"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +214,7 @@
         "    else:\n",
         "        print(\"等於零\")"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,13 +248,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HTgkepcI_uri"
+        "id": "HTgkepcI_uri",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aef4d99c-607e-4b04-c615-02c49c0d76bd"
       },
       "source": [
-        ""
+        "a=float(input(\"請輸入體溫:\"))\n",
+        "if a<36:\n",
+        "    print(\"體溫過低\")\n",
+        "elif a<38:\n",
+        "    print(\"體溫正常\")\n",
+        "elif a<39:\n",
+        "    print(\"體溫有點高\")\n",
+        "else:\n",
+        "    print(\"發燒了喔\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "請輸入體溫:36\n",
+            "體溫正常\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -278,13 +299,61 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VwzF3d4P_urj"
+        "id": "VwzF3d4P_urj",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        },
+        "outputId": "443dbc18-de49-4247-866b-e3f0f914b5c7"
       },
       "source": [
-        ""
+        "year=int(input(\"請輸入年分:\"))\n",
+        "if year-400=0:\n",
+        "    print(\"閏年\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-8d116244ee43>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if year-400=0:\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-7nWAARV73tQ",
+        "outputId": "a496a11a-cc9c-49d5-86e4-314b3f9ae1e4"
+      },
+      "source": [
+        "year=int(input(\"請輸入年分:\"))\n",
+        "if year%400==0:\n",
+        "    print(\"閏年\")\n",
+        "elif year%100==0:\n",
+        "    print(\"閏年\")\n",
+        "elif year%4==0:\n",
+        "    print(\"閏年\")\n",
+        "else:\n",
+        "    print(\"不是閏年\")"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "請輸入年分:2254\n",
+            "不是閏年\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -300,17 +369,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sEQwyJs__urj"
+        "id": "sEQwyJs__urj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9abfc82a-0e4f-4ad2-f9b2-cd6fd95b76af"
       },
       "source": [
-        "km=int(input(\"路程公里數:\"))\n",
-        "if km<=3:\n",
-        "    print(\"6元\")\n",
-        "elif km>3,<10:\n",
-        "    print(\"\")"
+        "km=int(input(\"路程距離:\"))\n",
+        "time=int(input(\"請輸入時間:\"))\n",
+        "if km>10:\n",
+        "    m=6+(10+3)*1.8+(km-10)*1.8*1.5\n",
+        "else:\n",
+        "    if km>=3:\n",
+        "        m=6+(km-3)*1.8\n",
+        "    else:\n",
+        "        m=6\n",
+        "m=m+(time/3)*1\n",
+        "print(\"計程車費是\",m)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "路程距離:5\n",
+            "請輸入時間:6\n",
+            "計程車費是 11.6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -318,7 +407,8 @@
         "id": "mpbaqSew_urj"
       },
       "source": [
-        ""
+        "##time m1=time/3*1\n",
+        "##"
       ],
       "execution_count": null,
       "outputs": []
