使用 Colaboratory 建立

--- a/藍誼軒_Week14_課堂練習.ipynb
+++ b/藍誼軒_Week14_課堂練習.ipynb
@@ -144,7 +144,7 @@
         "    print(\"No relation is found.\")\n",
         "print(\"Finished.\")"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +178,7 @@
         "if num>10:\n",
         "    print(\"number is greater than 10\")"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,7 +212,7 @@
         "    print(\"No relation is found.\")\n",
         "print(\"Finished.\")"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +286,7 @@
         "else:\n",
         "    print(\"a等於b\")"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -358,7 +358,7 @@
         "else:\n",
         "    print(\"超過重量無法運送哭哭\")"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,7 +408,7 @@
         "else:\n",
         "    print(\"體重肥胖\")"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -559,7 +559,7 @@
         "if score<60:\n",
         "    print(\"還好嗎你\")"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -589,7 +589,7 @@
         "else:\n",
         "    print(\"還好嗎你\")"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,7 +619,7 @@
         "else:\n",
         "    print(\"還好嗎你\")"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -650,7 +650,7 @@
         "    else:\n",
         "        print(\"還好嗎你\")"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -693,7 +693,7 @@
         "if num==0:\n",
         "    print(\"等於零\")"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -721,7 +721,7 @@
         "else:\n",
         "    print(\"是負數\")"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -818,7 +818,8 @@
         "id": "3xlkR4RAzlx5"
       },
       "source": [
-        ""
+        "t=input(\"請輸入電影名稱:\")\n",
+        "r="
       ],
       "execution_count": null,
       "outputs": []
@@ -848,6 +849,34 @@
         "else:\n",
         "    ans = \"奇數，請星期一三五日領口罩\"\n",
         "print(ans)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jGp54rsHFMyV",
+        "outputId": "72eabb7d-673f-4705-a4f9-2538c5204ac3"
+      },
+      "source": [
+        "id=int(input(\"請輸入身分證字號末三碼:\"))\n",
+        "if id%2==0:\n",
+        "    print(\"偶數，二四六\")\n",
+        "if id%2==1:\n",
+        "    print(\"奇數，一三五\")"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "請輸入身分證字號:855\n",
+            "奇數，一三五\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
